# Aruba-Central-Portal

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DOCKER_DEPLOYMENT.md  DOCKER_DESKTOP_INSTALL.md  DOCKER_GITHUB_SETUP.md  Dockerfile  GITHUB_CONTAINER_REGISTRY.md  HARDCODED_VALUES_REPORT.md  HARDCODED_VALUES_SUMMARY.md  LICENSE  QUICK_START_NO_GIT.md  README.md  START_HERE.md  UGREEN_NAS_SETUP.md  UPDATE_DOCKER_CONTAINER.md  UPDATING_DOCKER.md  config.yaml  debug-setup.sh  deploy-check.sh  docker-build-and-push.sh  docker-compose.ghcr.yml  docker-compose.yml  docker-entrypoint.sh  download-and-update.sh  download-to-nas.sh  env.template  fix-env-permissions.sh  force-update.sh  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  set-uid-gid.sh  setup.sh  update-portal.sh
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: .gitignore  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  FEATURES.md  MONITORING_FEATURES.md  NEW_CENTRAL_API_ENDPOINTS.md  QUICKSTART.md  README.md  SECURITY_ASSESSMENT.md
docs/: CONFIGURATION.md  ENV_VARIABLES.md  GIT_SECURITY.md  HOW_IT_WORKS.md  ROLES_AND_PERMISSIONS.md  SETUP_WIZARD_GUIDE.md  USER_MANAGEMENT_GUIDE.md
output/: README.md
scripts/: __init__.py  check_msp_info.py  cleanup_test_wlans.py  create_tunnel_wlan_from_working.py  debug_gateway_vlans.py  example_script.py  explore_api.py  explore_msp_api.py  export_users_csv.py  extract_vlans_from_wlans.py  find_uuid_advanced.py  list_tenants.py  msp_dashboard.py  test_api.py  test_auth.py  test_auth_v2.py  test_tunnel_vlan_selection.py  (+4 more)
(+79 files in other folders)
